# njit-ml-project-spring-2020

./: .envrc  .gitignore  notebook.sh  pyproject.toml
docs/: proposal.md
docs/proposal-latex/: proposal.tex
notebooks/: SVM-regression-models.ipynb  a-all.ipynb  a-classification-problem.ipynb  a-final-notebook.ipynb  feature-selection.ipynb  final-regression-models.ipynb  pca-and-kpca.ipynb  picking-our-strategy.ipynb  pull-instrument-data-local.ipynb  scratch-basic-eda-scicoria.ipynb  scratch-load-arff-to-dataframe.ipynb  scratch-load-timeseries-from-csv.ipynb  scratch-regression-models.ipynb  scratch-tf-stock1.ipynb  scratch-visualization.ipynb  ted_testing.ipynb
notebooks/data/: AAPL.csv  AMZN.csv  GOOG.csv  MSFT.csv
notebooks/scicoria/: scratch-tf-stock-rewrite.ipynb
src/data/: get_data.py  get_data.sh
src/features/: build_features.py
src/models/: backtest_strategy.py
src/visualization/: visualize.py
