[tool.poetry]
name = "njit-ml-scratch"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
notebook = "^6.0.2"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.1.2"
scikit-learn = "^0.22.1"
jupyter_contrib_nbextensions = "^0.5.1"
watermark = "^2.0.2"
jupyterlab = "^1.2.6"
pylint = "~=2.4.4"
pyalgotrade = "^0.20"
seaborn = "^0.10.0"
pandas = "^1.0.3"
requests = "^2.23.0"
tensorflow = "^2.1.0"
tensorflow-estimator = "2.1.0"
yahoo_fin = "^0.8.5"
requests_html = "^0.10.0"
ta = "^0.5.21"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
